# ollama-chat

./: README.md  ollama_chat.py  pyproject.toml
ollama_chat/: __init__.py  main.py
ollama_chat/core/: __init__.py  agent.py  code.py  context.py  document_indexer.py  extract_text.py  file_management.py  full_document_store.py  long_term_memory_maganer.py  long_term_memory_manager.py  markdown_splitter.py  memory_manager.py  ollama.py  plugins.py  query_vector_database.py  simple_web_crawler.py  simple_web_scraper.py  summarize.py  toolman.py  utils.py  web_search.py
ollama_chat/text/: chain_of_thoughts_sts_prompt.txt  possible_prompt_commands.txt
